# internal/types/interfaces/analysis.go
@@ -8,8 +8,10 @@ import (
 
 type AnalysisService interface {
 	GetAnalysisByAnalysisID(ctx context.Context, analysisID string) (*types.Analysis, error)
+	GetAnalysisNodeByAnalysisNodeID(ctx context.Context, analysisNodeID string) (*types.AnalysisNode, error)
 }
 
 type AnalysisRepository interface {
 	GetAnalysisByAnalysisID(ctx context.Context, analysisID string) (*types.Analysis, error)
+	GetAnalysisNodeByAnalysisNodeID(ctx context.Context, analysisNodeID string) (*types.AnalysisNode, error)
 }
